# AccessControlTerminal

./: .gitignore  AccessTerminal.pro  CMakeLists.txt  README.en.md  README.md  main.cpp  res.qrc  widget.cpp  widget.h  widget.ui
app/: app_coordinator.cpp
audio/: audio_manager.cpp  call_controller.cpp
audioManager/: audio_receiver.cpp  audio_sender.h  call_controller.cpp  form_intercom.h
call/: audio_receiver.h  audio_sender.cpp  call_controller.cpp  form_call.h
cameraManager/: v4l2_camera.h
core/: app_coordinator.cpp  app_coordinator.h
docs/superpowers/plans/: 2026-05-27-modular-refactor-plan.md
docs/superpowers/specs/: 2026-05-27-mvc-modular-refactor-design.md
fingerprint/: hailin_fingerprint.h
fingerprintManager/: form_finger.cpp
intercom/: call_controller.cpp  call_controller.h  form_intercom.cpp
network/: tcp_signaling.h
password/: form_password.h
passwordManager/: form_password.cpp
src/audio/: audio_manager.h
src/call/: call_controller.cpp  call_controller.h  form_call.ui
src/camera/: camera_push_thread.cpp  camera_udp_server.h  v4l2_camera.cpp
src/core/: app_coordinator.cpp  app_coordinator.h  widget.cpp  widget.h  widget.ui
src/face/: face_detector.cpp  face_detector.h  face_manager.cpp  face_manager.h
src/fingerprint/: fingerprint_manager.cpp  fingerprint_manager.h  form_finger.h  form_finger.ui  hailin_fingerprint.cpp
src/hardware/: gpio_controller.cpp  gpio_controller.h
src/network/: tcp_signaling.cpp
src/password/: form_passwd.cpp  form_passwd.h  form_passwd.ui  password_manager.cpp  password_manager.h
ui/: form_call.cpp  form_intercom.ui  form_password.ui  widget.ui
videoManager/: camera_push_thread.h  camera_udp_server.cpp
